refactor: 추가 리팩토링
- View의 메서드를 정적 메서드로 변경합니다.
- indent를 최소화하려고 했습니다.
- DTO가 로직을 가지지 않도록 수정합니다.
- 숫자 중복 확인 로직을 for문에서 Stream을 사용하도록 수정합니다.